src/snapshots/bimrkltr__tests__bidirectional_tree_display.snap
---
source: src/lib.rs
expression: "format!(\"{}\", bi_tree)"
---
🔄 Bidirectional Merkle Tree
├── Main Tree:
🌳 Merkle Tree (height: 2)
├── Root: 0000000000000000000000000000000000000000000000000000000000000000
├── Leaves: 4
├── Total Nodes: 7
└── First 3 leaves:
    0: 0000000000000000000000000000000000000000000000000000000000000000
    1: 0000000000000000000000000000000000000000000000000000000000000000
    2: 0000000000000000000000000000000000000000000000000000000000000000
├── Child Trees: 2/4
│   ├── Leaf 0 → Child Root: 0000000000000000000000000000000000000000000000000000000000000000
│   ├── Leaf 1 → Child Root: 0000000000000000000000000000000000000000000000000000000000000000
└── Configuration:
    Height: 2, Max Children: 4
