src/snapshots/bimrkltr__tests__merkle_proof_display.snap
---
source: src/lib.rs
expression: "format!(\"{}\", proof)"
---
🔐 Merkle Proof
├── Leaf Index: 1
├── Path Length: 2
└── Sibling Hashes:
    Level 0: 2040000000000000000000000000000000000000000000000000000000000000
    Level 1: 0000000000000000000000000000000000000000000000000000000000000000
