src/snapshots/bimrkltr__tests__merkle_tree_display.snap
---
source: src/lib.rs
expression: "format!(\"{}\", tree)"
---
🌳 Merkle Tree (height: 2)
├── Root: 0000000000000000000000000000000000000000000000000000000000000000
├── Leaves: 4
├── Total Nodes: 7
└── First 3 leaves:
    0: 2040000000000000000000000000000000000000000000000000000000000000
    1: 4080000000000000000000000000000000000000000000000000000000000000
    2: 60c0000000000000000000000000000000000000000000000000000000000000
