src/snapshots/bimrkltr__tests__single_node_tree_display.snap
---
source: src/lib.rs
expression: "format!(\"{}\", tree)"
---
🌳 Merkle Tree (height: 0)
├── Root: 2040000000000000000000000000000000000000000000000000000000000000
├── Leaves: 1
├── Total Nodes: 1
└── First 1 leaves:
    0: 2040000000000000000000000000000000000000000000000000000000000000
