src/snapshots/bimrkltr__tests__small_tree_display.snap
---
source: src/lib.rs
expression: "format!(\"{}\", tree)"
---
🌳 Merkle Tree (height: 1)
├── Root: 0000000000000000000000000000000000000000000000000000000000000000
├── Leaves: 2
├── Total Nodes: 3
└── First 2 leaves:
    0: 2040000000000000000000000000000000000000000000000000000000000000
    1: 4080000000000000000000000000000000000000000000000000000000000000
